fix page overflow

--- a/src/pages/game_page/GamePage.scss
+++ b/src/pages/game_page/GamePage.scss
@@ -1,6 +1,5 @@
 .game-page {
   height: 100vh;
-  overflow: hidden;
   .container {
     display: flex;
     flex-direction: column;
